jsonwalks/css/ramblerswalks.css
/* ... */
.ra-accordion-item.walkCancelled div.basics,
.ra-accordion-item.walkCancelled div.nomeetplace,
.ra-accordion-item.walkCancelled div.meetplace,
.ra-accordion-item.walkCancelled div.startplace,
.ra-accordion-item.walkCancelled div.nostartplace,
.ra-accordion-item.walkCancelled div.finishplace,
.ra-accordion-item.walkCancelled div.difficulty{
    color:#C60C30;
    text-decoration-line: line-through;
}

.ra-accordion-item.walkNew {
    padding-left: 0;
    background: url(../../images/new.gif) no-repeat scroll 0 50% transparent;
    background-position-x: 0px;
    background-position-y: 50%;
    background-position: 60px 0;

}
.ra-accordion-container {
    color:black;
}
.nextwalkNew::before {
    content: url('../../images/new.gif');
    padding-right:5px;
}

.walkNew.printon {
    background:none;
    padding-left: 0px;;

}
.updated.walkNew {
    padding-left: 35px;
    background: url(../../images/new.gif) no-repeat scroll 0 50% rgba(0,0,0,0);
}
.gradeNew::after {
    content: url('../../images/newsq.gif');
    padding-left:5px;
}

span.walkerror {
    color: #C60C30;
}

div.walkstdfulldetails div.description p{
    margin: 0px;
}
div.walkstdfulldetails div.group
{
    font-size: 115%;
    margin: 2px;
    border-radius: 10px 10px 10px 10px;
    padding: 7px;
    display: table;
    width:97%;
    border: 0px;
    background-color: #782327;
    color: #eeeeee;
}
div.walkdates {
    font-size: 80%;
    font-style: italic;
}

div.walkstdfulldetails div.reason,
div.walkstdfulldetails div.basics div.description,
div.walkstdfulldetails div.meetplace div.place,
div.walkstdfulldetails div.startplace div.place,
div.walkstdfulldetails div.finishplace div.place{
    font-size: 115%;
}

div.walkstdfulldetails div.reason,
div.walkstdfulldetails div.basics,
div.walkstdfulldetails div.nomeetplace,
div.walkstdfulldetails div.meetplace,
div.walkstdfulldetails div.startplace,
div.walkstdfulldetails div.nostartplace,
div.walkstdfulldetails div.finishplace,
div.walkstdfulldetails div.difficulty,
div.walkstdfulldetails div.walkcontact,
div.walkstdfulldetails div.festivals,
div.walkstdfulldetails div.strands,
div.walkstdfulldetails div.suitability,
div.walkstdfulldetails div.surroundings,
div.walkstdfulldetails div.theme,
div.walkstdfulldetails div.specialStatus,
div.walkstdfulldetails div.facilities{
    margin: 2px;
    border-radius: 10px 10px 10px 10px;
    padding: 5px;
    -webkit-column-break-inside: avoid; /* Chrome, Safari */
    page-break-inside: avoid;           /* Theoretically FF 20+ */
    break-inside: avoid-column;         /* IE 11 */
    display:table;                      /* Actually FF 20+ */
    width:97%;
    border: 2px solid #cccccc  ;
    background-color: #eeeeee;
    line-height: 1.5em;

}
div.walkstdfulldetails div.festivals > ul,
div.walkstdfulldetails div.strands > ul,
div.walkstdfulldetails div.suitability > ul,
div.walkstdfulldetails div.surroundings > ul,
div.walkstdfulldetails div.theme > ul,
div.walkstdfulldetails div.specialStatus > ul,
div.walkstdfulldetails div.facilities > ul {
    margin-bottom: 0px;
}
div.walkstdfulldetails div.walkdates{
    margin: 2px;
    border-radius: 10px 10px 10px 10px;
    padding: 5px;
    display: table;
    width:97%;
    border: 2px solid #cccccc  ;
    background-color: #f0f0f0;
    line-height: 1.5em;
}
div.walkstdfulldetails.walkCancelled div.reason{
    text-decoration-line: none;
    color:black;
}
/*div.walkstdfulldetails.walkCancelled.stdfulldetails {
        color:#C60C30;
}*/
div.walkstdfulldetails.walkCancelled.stdfulldetails div.basics,
div.walkstdfulldetails.walkCancelled.stdfulldetails div.nomeetplace,
div.walkstdfulldetails.walkCancelled.stdfulldetails div.meetplace,
div.walkstdfulldetails.walkCancelled.stdfulldetails div.startplace,
div.walkstdfulldetails.walkCancelled.stdfulldetails div.nostartplace,
div.walkstdfulldetails.walkCancelled.stdfulldetails div.finishplace,
div.walkstdfulldetails.walkCancelled.stdfulldetails div.difficulty {
    text-decoration-line: line-through;
    
}

/* Popups */

.rapopup {
    color:#782327;
    cursor: pointer;
}
.rapopup:after {
    padding-left:10px;
    content: url(../images/google20.jpg);
}
.mappopup {
    color:#782327;
    cursor: pointer;
}
.place .mappopup {
    font-size:  90%
}
.events.links {
    font-size: .8em;
}


abbr[title] {
    border-bottom: 1px dotted #d5d5d5;
}
.distnear { color:   #007A87}
.distfar { color:   #8a1727}

div.ra_walks_more a{
    background-image: linear-gradient(-90deg, #206C49 0%, #2B9163 100%);
    color: #fff ;
    font-weight: bold;
    transition: all 0.3s ease-out 0s;
    border-radius: 5px;
    cursor: pointer;
    display: inline-block;
    font-size: 1.1em;
    padding: 5px 12px;
    text-decoration-line: none;
    position: absolute;
    right: 50px;
}
div.ra_walks_more a:hover{
    background-image: linear-gradient(-90deg, #2B9163 0%, #206C49 100%);
}

div.groupA,div.groupG,div.groupS { 
    font-weight: bold;
}



@media only screen and (min-width: 769px){
    div.walkstdfulldetails {
        -webkit-column-count: 2; /* Chrome, Safari, Opera */
        -moz-column-count: 2; /* Firefox */
        column-count: 2;
        border-radius: 10px 10px 10px 10px;
        padding: 5px;
        padding-right:10px;
        background-color: #ffffff;
        min-width: 500px;
    }
}

@media only screen and (max-width: 768px){
    div.walkstdfulldetails {
        border-radius: 10px 10px 10px 10px;
        padding: 5px;
        padding-right:10px;
        background-color: #ffffff;
        min-width: 500px;

    }
}         

#grade-ea {  
    background-color: #8BA69C;
}
#grade-e {  
    background-color: #A8B400;
}
#grade-l {   
    background-color: #007A87;
}
#grade-m {   
    background-color: #C75B12;
}
#grade-s {   
    background-color: #782327;
}
#grade-t {
    background-color: #5B491F;
}

.grade-ea {  
    background-color: #8BA69C !important;
}
.grade-e {  
    background-color: #A8B400 !important;
}
/* ... */

